:recycle: Format code with consistent blank lines and update class-level Javadoc